--- a/src/components/PostsPage/List/ListItem/list-item.module.css
+++ b/src/components/PostsPage/List/ListItem/list-item.module.css
@@ -1,130 +1,61 @@
-.item {
+.hatik {
     width: 100%;
-    height: 200px;
+    height: 80px;
     background: #ffffff;
-    border: 1px solid #fff;
-    border-radius: 10px;
+    border-radius: 5px;
     display: flex;
     padding: 10px 0;
 }
 
-.itemImage {
-    width: 350px;
-    background-color: #ffffff;
+.hatik:hover {
+    background-color: #ffcfa2;
+}
+
+
+.hatt {
+    width: 100%;
+    display: flex;
+    cursor: pointer;
+}
+
+.hatikImage {
+    width: 120px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
 }
 
-.generalInfoBox {
-    max-width: 400px;
-    height: 180px;
-    background-color: #fff;
-    margin: 0 16px;
-    border-radius: 10px;
-    box-shadow: 1px 3px 12px 2px rgba(0, 0, 0, 0.1);
+.hatikImage img {
+    width: 80%;
+}
+
+.glxavorInfoBox {
+    width: 100%;
+    margin: auto 50px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.categoryBox {
-    padding: 0 10px;
-    font-size: 14px;
-}
-
-.category {
-    padding: 5px 0px 5px 5px;
-    margin: 0;
-}
-
-.titleBox {
-    padding: 0 10px;
-    font-size: 14px;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .title {
-    padding: 5px 200px 5px 5px;
+    font-size: 22px;
     margin: 0;
 }
 
-.descriptionBox {
-    padding: 0 10px;
-    font-size: 14px;
-}
-
-.description {
+.category {
+    font-size: 20px;
     margin: 0;
-    padding: 5px 0px 5px 5px;
-}
-
-.currentInfoBox {
-    max-width: 400px;
-    height: 180px;
-    background-color: #fff;
-    margin: 0 16px;
-    border-radius: 10px;
-    box-shadow: 1px 3px 12px 2px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.dateBox {
-    padding: 0 10px;
-    font-size: 14px;
 }
 
 .date {
-    padding: 5px 0px 5px 5px;
-    margin: 0;
-}
-
-.locationBox {
-    padding: 0 10px;
     font-size: 14px;
-}
-
-.location {
-    padding: 5px 0px 5px 5px;
-    margin: 0;
-}
-
-.floorAreaBox {
-    padding: 0 10px;
-    font-size: 14px;
-}
-
-.floorArea {
-    padding: 5px 0px 5px 5px;
-    margin: 0;
-}
-
-.clientBox {
-    padding: 0 10px;
-    font-size: 14px;
-}
-
-.client {
-    padding: 5px 0px 5px 5px;
-    margin: 0;
-}
-
-.architectsBox {
-    padding: 0 10px;
-    font-size: 14px;
-}
-
-.architects {
-    padding: 5px 0px 5px 5px;
     margin: 0;
 }
 
 .btnBox {
     margin: 0 16px 0 auto;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
 }
 
@@ -158,6 +89,7 @@
     color: #fff;
     border: none;
     border-radius: 10px;
+    margin-left: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
