--- a/src/shared/Header/header.module.css
+++ b/src/shared/Header/header.module.css
@@ -16,11 +16,6 @@
     text-transform: uppercase;
 }
 
-.homeBtnBox {
-    margin-left: 40px;
-    position: absolute;
-}
-
 .homeBtn {
     width: 60px;
     height: 60px;
@@ -40,5 +35,15 @@
 .homeBtn:hover {
     color: #FE7D05;
     border: 3px solid #FE7D05;
+}
 
+
+
+.icons {
+    width: 200px;
+    margin-left: 50px;
+    padding: 10px;
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
 }
