--- a/src/Pages/HomePage/home.module.css
+++ b/src/Pages/HomePage/home.module.css
@@ -1,7 +1,7 @@
 .homeWrapper{
-    width: '100%';
-    height: '100vh';
-    background: '#000'
+    width: 100%;
+    height: 100vh;
+    background: #000
  }
 
 .main {
