--- a/src/Pages/PostsPage/components/Categories/categories.module.css
+++ b/src/Pages/PostsPage/components/Categories/categories.module.css
@@ -22,3 +22,22 @@
     color: #fff;
     border: 2px solid #000;
 }
+
+.activeCategory {
+    width: 100%;
+    height: 70px;
+    border-radius: 5px;
+    border: 1px solid #000;
+    background: #FE7D05;
+    color: #fff;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    transition: ease-in 0.3s;
+}
