--- a/src/shared/FormComponents/FormComponents.module.css
+++ b/src/shared/FormComponents/FormComponents.module.css
@@ -4,3 +4,97 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+
+.textInput {
+    max-width: 270px;
+    min-width: 270px;
+    margin-right: 30px
+}
+
+.textArea {
+    max-width: 270px;
+    min-width: 270px;
+    height: 100px;
+    margin-right: 30px
+}
+
+.dropDownBtn button {
+    width: 270px;
+    margin-right: 30px;
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #DEE2E6;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.dropDownBtn button:hover {
+    background-color: #FE7D05;
+    border: 1px solid #FE7D05;
+}
+
+.photosLabel {
+    max-width: 120px;
+    min-width: 120px;
+    margin: 50px 0;
+    text-align: end;
+}
+
+.formControl {
+    display: none;
+}
+
+.plusButton {
+    width: 60px;
+    height: 60px;
+    background-color: #ccc;
+    font-size: 24px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto 20px;
+    transition: all 0.3s;
+}
+
+.plusButton:hover {
+    background-color: #FE7D05;
+    color: #fff;
+    cursor: pointer;
+}
+
+.photoFrame {
+    position: relative;
+    background-color: #fff;
+    margin: 10px;
+    border-radius: 5px;
+}
+
+.removePhoto {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    font-size: 12px;
+    background: rgba(255, 255, 255, 0.60);
+    color: #000;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px;
+    top: 0;
+    right: 0;
+    transition: all 0.3s;
+}
+
+.removePhoto:hover {
+    background: rgba(104, 94, 94, 0.69);
+    cursor: pointer;
+}
+
+.selectedImage {
+    max-height: 100px;
+    border-radius: 5px
+}
