--- a/src/shared/Header/header.module.css
+++ b/src/shared/Header/header.module.css
@@ -40,10 +40,22 @@
 
 
 .icons {
-    width: 200px;
+    /* width: 250px; */
     margin-left: 50px;
     padding: 10px;
     position: absolute;
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
+}
+
+.homeBtnBox {
+    margin-left: 20px;
+}
+
+.arrowBtnBox {
+    margin-left: 20px;
+}
+
+.editBtnBox {
+    margin-left: 20px;
 }
