--- a/src/shared/Loading/Loading.module.css
+++ b/src/shared/Loading/Loading.module.css
@@ -12,7 +12,7 @@
 
 .loader {
     border: 4px solid #f3f3f3;
-    border-top: 4px solid #1e74ae;
+    border-top: 4px solid #FE7D05;
     border-radius: 50%;
     width: 40px;
     height: 40px;
